--- a/Frontend/src/views/index.ejs
+++ b/Frontend/src/views/index.ejs
@@ -6,24 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Admin Login</title>
-    <link rel="stylesheet" href="/admin/styles.css">
+    <link rel="stylesheet" href="admin-styles.css">
 </head>
 
 <body>
     <header>TAS OC 2019 Games and Gift Sign-Up</header>
     <section class="table">
+
         <form action="/AdminLogin" method="POST">
             <div class="login">
-                <p>Admin Login</p>
+                <p>Admin Login</p> 
             </div>
+                <% if(messages.error){ %>
+                <div class = "login">
+                <p style = "color:RED">Invalid credentials. Please try again.</p>
+                </div>
+                <% } %>
             <table class="text-fields">
                 <tr>
                     <td>Name:</td>
-                    <td><input type="text" name="username" required></td>
+                    <td><input type="text" name="username"></td>
                 </tr>
                 <tr>
                     <td>Password:</td>
-                    <td><input type="password" style="margin-left: auto" name="password" required>
+                    <td><input type="password" style="margin-left: auto" name="password">
                     </td>
                 </tr>
             </table>
