Backend now parses .csv and keeps track of status of all items.

--- a/Frontend/src/views/item-signup.ejs
+++ b/Frontend/src/views/item-signup.ejs
@@ -14,7 +14,7 @@
             <p>You're signing up for the following item:</p>
             <p>Item Name: <%= item.name %></p>
         </div>
-        <form action='/sign-up' method="POST">
+        <form action='/sign-up/<%= item.name%>' method="POST">
             <table class="text-fields">
                 <tr>
                     <td>Name:</td>
